--- a/stack-lts-15.yaml
+++ b/stack-lts-15.yaml
@@ -44,6 +44,7 @@ extra-deps:
   - tree-sitter-python-0.9.0.2
   - tree-sitter-ql-0.1.0.3
   - tree-sitter-ruby-0.5.0.2
+  - tree-sitter-rust-0.1.0.0
   - tree-sitter-tsx-0.5.0.1
   - tree-sitter-typescript-0.5.0.1
 
